<resources>
    <string name="app_name">Page Insights</string>
    <string name="url_name">ENTER URL</string>
    <string name="history_bottom_sheet_title">Insight</string>
    <string name="dummy_url">https://developers.google.com</string>
    <string name="dummy_date">Analyzed On: 12-Jan-2019</string>
    <string name="strategy">STRATEGY</string>
    <string name="menu_desktop">Desktop</string>
    <string name="menu_mobile">Mobile</string>
    <string name="analyze_site_for">Select Strategy</string>
    <string name="title_activity_insight">InsightActivity</string>
    <string name="performance">Performance</string>
    <string name="accessibility">Accessibility</string>
    <string name="best_practices">Best Practices</string>
    <string name="pwa">PWA</string>
    <string name="seo">SEO</string>
    <string name="main_activity_title">History</string>
    <string name="transition_string">insight</string>
    <string name="test">two</string>
    <!--<string name="score">%1$s %%</string>-->
    <string name="score">Score: %1$s</string>
    <string name="result">Result</string>
    <string name="url_start">https://</string>
    <string name="description">description</string>
</resources>
