<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/transition_string"
    tools:context=".activity.InsightActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/performance"/>

    <ImageView
        android:transitionName="@string/test"
        android:src="@drawable/ic_dashboard_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--<com.google.android.material.bottomnavigation.BottomNavigationView-->
        <!--android:id="@+id/navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:menu="@menu/navigation" />-->

</RelativeLayout>