<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_10"
    android:layout_marginTop="@dimen/spacing_10"
    android:layout_marginEnd="@dimen/spacing_10"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_marginTop="@dimen/spacing_10"
        android:layout_marginBottom="@dimen/spacing_10"
        android:layout_marginStart="@dimen/spacing_5"
        android:layout_marginEnd="@dimen/spacing_5"
        android:id="@+id/item_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_10"
            android:paddingTop="@dimen/spacing_10"
            android:paddingEnd="@dimen/spacing_10">

            <ImageView
                android:id="@+id/thumbnail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_history_black"
                android:transitionName="@string/test" />

            <LinearLayout
                android:id="@+id/basic_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/spacing_20"
                android:layout_marginEnd="@dimen/spacing_20"
                android:layout_toStartOf="@id/more"
                android:layout_toEndOf="@id/thumbnail_image"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/url_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/dummy_url"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_date"
                    android:textAppearance="@style/TextAppearance.Design.Hint" />
            </LinearLayout>

            <ImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_drop_down_black" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/performance" />

                <TextView
                    android:id="@+id/score_performance"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="viewEnd"
                    android:text="@string/score" />

                <ProgressBar
                    android:id="@+id/progress_performance"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_10"
                    android:layout_toStartOf="@+id/score_performance"
                    android:progress="80" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/accessibility" />

                <TextView
                    android:id="@+id/score_accessibility"
                    android:layout_width="40dp"
                    android:textAlignment="viewEnd"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/score" />

                <ProgressBar
                    android:id="@+id/progress_accessibility"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_10"
                    android:layout_toStartOf="@+id/score_accessibility"
                    android:progress="70" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/best_practices" />

                <TextView                    
                    android:textAlignment="viewEnd"
                    android:id="@+id/score_best_practices"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/score" />

                <ProgressBar
                    android:id="@+id/progress_best_practices"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_10"
                    android:layout_toStartOf="@+id/score_best_practices"
                    android:progress="90" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/pwa" />

                <TextView
                    android:textAlignment="viewEnd"
                    android:id="@+id/score_pwa"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/score" />

                <ProgressBar
                    android:id="@+id/progress_pwa"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_10"
                    android:layout_toStartOf="@+id/score_pwa"
                    android:progress="85" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/seo" />

                <TextView
                    android:textAlignment="viewEnd"
                    android:id="@+id/score_seo"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/score" />

                <ProgressBar
                    android:id="@+id/progress_seo"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_10"
                    android:layout_toStartOf="@+id/score_seo"
                    android:progress="69" />

            </RelativeLayout>

        </LinearLayout>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_marginStart="@dimen/spacing_5"-->
            <!--android:layout_marginTop="@dimen/spacing_5"-->
            <!--android:layout_marginEnd="@dimen/spacing_5"-->
            <!--android:background="@color/colorAccent" />-->
    </LinearLayout>
</androidx.cardview.widget.CardView>